--- a/view/inc/menu.front.html.twig
+++ b/view/inc/menu.front.html.twig
@@ -1,4 +1,4 @@
-<!-- Navigation moderne pour articles -->
+<!-- Navigation moderne pour le front -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
     <div class="container">
         <a class="navbar-brand fw-bold" href="{{ racineURL }}">
