--- a/view/template.back.html.twig
+++ b/view/template.back.html.twig
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
           rel="stylesheet">{% endblock %}
 {% block body %}
-    {% block nav %}{% include 'inc/menu.front.html.twig' %}{% endblock %}
+    {% block nav %}{% include 'inc/menu.back.html.twig' %}{% endblock %}
     {% block content %}
         {% block hero %}
             <!-- Hero Section -->
