--- a/view/inc/menu.back.html.twig
+++ b/view/inc/menu.back.html.twig
@@ -20,6 +20,26 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ racineURL }}admin/articles">
+                        <i class="bi bi-tags me-1"></i>Articles
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ racineURL }}admin/categories">
+                        <i class="bi bi-tags me-1"></i>Catégories
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ racineURL }}admin/commentaires">
+                        <i class="bi bi-tags me-1"></i>Commentaires
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ racineURL }}admin/users">
+                        <i class="bi bi-tags me-1"></i>Utilisateurs
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ racineURL }}user/{{ session.user_login }}">
                         <i class="bi bi-person me-1"></i>{% if session.user_real_name %}{{ session.user_real_name }}{% else %}{{ session.user_login }}{% endif %}
                     </a>
