--- a/view/backend/update.category.back.html.twig
+++ b/view/backend/update.category.back.html.twig
@@ -10,11 +10,11 @@
         <div class="col-lg-12">
             <div class="card border-0 shadow-sm h-100">
                 <div class="card-body text-center">
-                    <h5 class="card-title text-success">Actions Rapides</h5>
-                    <a href="{{ racineURL }}admin/" class="btn btn-outline-success btn-sm">
+                    <h5 class="card-title text-info">Actions Rapides</h5>
+                    <a href="{{ racineURL }}admin/" class="btn btn-outline-info btn-sm">
                         <i class="bi bi-plus me-1"></i>Retour à l'administration
                     </a>
-                    <a href="{{ racineURL }}admin/categorie/" class="btn btn-outline-success btn-sm">
+                    <a href="{{ racineURL }}admin/categorie/" class="btn btn-outline-info btn-sm">
                         <i class="bi bi-plus me-1"></i>Retour à la liste des catégories
                     </a>
                 </div>
