--- a/view/backend/add.category.back.html.twig
+++ b/view/backend/add.category.back.html.twig
@@ -32,6 +32,10 @@
                             <label for="category_title" class="form-label">Titre</label>
                             <input type="text" class="form-control" id="category_title" name="category_title" required>
                         </div>
+                        <div class="mb-3">
+                            <label for="category_description" class="form-label">Texte</label>
+                            <textarea class="form-control" id="category_description" name="category_description" rows="10"></textarea>
+                        </div>
                         <button type="submit" class="btn btn-primary">Créer la catégorie</button>
                     </form>
                 </div>
